<resources>
    <string name="facebook_app_id">118839481925847</string>
    <string name="app_name">ICh&amp;r_Movil</string>
    <string name="Log">HOTELS &amp; RESORTS</string>
    <string name="logface">Si tiene cuenta de Facebook:</string>
    <string name="loggoo">Si tiene cuenta de Google:</string>
    <string name="Name">USUARIO:</string>
    <string name="Pass">CONTRASEÑA:</string>
    <string name="bsesion">Iniciar Sesión</string>
    <string name="registro">Inscribirse</string>
    <string name="RePass">¿Olvidó su contraseña?</string>
    <string name="nombre">NOMBRE:</string>
    <string name="apellido">APELLIDO:</string>
    <string name="direccion">DIRECCIÓN:</string>
    <string name="pais">PAIS:</string>
    <string name="ciudad">CIUDAD:</string>
    <string name="correo">CORREO:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>
    <string name="ced">CÉDULA:</string>
    <string name="tel">TELÉFONO:</string>
    <string name="prof">PROFESIÓN:</string>
    <string name="mot">MOTIVO DEL VIAJE:</string>
    <string name="registrar">Registrar</string>
    <string name="consulta">Consultar</string>
    <string name="disp">Disponibles:</string>
    <string name="fecin">Fecha de ingreso:</string>
    <string name="fecsa">Fecha de salida:</string>
    <string name="prec">Precio:</string>
    <string name="acom">Acomodación:</string>
    <string name="fecev">Fecha del evento:</string>
    <string-array name="hora">
        <item>8 am</item>
        <item>9 am</item>
        <item>10 am</item>
        <item>11 am</item>
        <item>12 m</item>
        <item>1 pm</item>
        <item>2 pm</item>
        <item>3 pm</item>
        <item>4 pm</item>
        <item>5 pm</item>
        <item>6 pm</item>
        <item>7 pm</item>
        <item>8 pm</item>
    </string-array>
    <string name="ub">Ubicación</string>
    <string name="usuario">USUARIO:</string>
    <string name="cancelarr">Cancelar reserva:</string>
    <string name="reserva">Reservar</string>
    <string name="fogon" formatted="false">Es el restaurante insignia del hotel. Su especialidad son las más ricas preparaciones a la piedra y las pizzas a la leña. Abierto desde las 11 am hasta las 12 pm.</string>
    <string name="brassie" formatted="false">Gran buffet de desayuno, con deliciosos panes, las más exóticas frutas, quesos, jugos, vegetales, sopas, entre otros productos. Abierto desde las 7 am hasta las 11 am. </string>
    <string name="cava" formatted="false">Cocina de autor, con especialidad en platos para compartir. Es un lugar para tomar vinos de gran variedad. Abierto desde las 11 am hasta las 12 pm.</string>
    <string name="spa" formatted="false">SPA,TURCO,SAUNA Y JACUZZI</string>
    <string name="spades" formatted="false">Disfrute una sesión relajante en el spa del hotel intercontinental Medellín. Después, continúe con una experiencia sensorial pasando por el turco, sauna y jacuzzi.</string>
    <string name="piscina" formatted="false">LA GRAN PISCINA</string>
    <string name="piscinades" formattes="false">En un ambiente verde y campestre puede disfrutar de una piscina semiolímpica, ideal para nadar y ejercitarse</string>
    <string name="mini" formatted="false">Mini Golf</string>
    <string name="minides" formatted="false">El hotel cuenta con una cancha de mini golf.</string>
    <string name="tenis" formatted="false">Tenis</string>
    <string name="tenisdes" formatted="false">El hotel cuenta con dos canchas de tenis, con profesores y cadis.</string>
    <string name="gym" formatted="false">GIMNASIO</string>
    <string name="gymdes" formatted="false">Le ofrecemos desde clases con instructores profesionales hasta maquinas individuales para realizar sus propias rutinas de ejercicio. Abierto desde las 6 am hasta las 8 pm</string>
    <string name="reg" formatted="false">Para iniciar el registro ingrese los datos</string>
    <string name="consul" formatted="false">Consulte el estado de sus reservas</string>
    <string name="cambiar" formatted="false">Ingrese una nueva contraseña</string>
    <string name="rcambiar" formatted="false">Confirme la contraseña</string>
    <string-array name="motivo">
        <item>Negocios</item>
        <item>Turismo</item>
        <item>Conferencia</item>
        <item>Trabajo</item>
    </string-array>
    <string-array name="acomod">
        <item>U</item>
        <item>Auditorio</item>
        <item>Espina</item>
        <item>Aula</item>
        <item>Coctel</item>
        <item>Imperial</item>
        <item>Banquete</item>
    </string-array>
    <string-array name="fecham">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="fechad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deshabsupk" formatted="false">Habitación de 28mts² con cama king, aire acondicionado, ventanas antiruido, escritorio y televisor pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño.</string>
    <string name="deshabsupt" formatted="false">Habitación de 28mts² con dos camas, aire acondicionado, ventanas antiruido, escritorio y televisor pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño​​.​</string>
    <string name="deshabsuppej" formatted="false">Habitación de 28mts² ubicada en el piso ejecutivo, con acceso a la zona VIP que cuenta con servicio en el front desk, sala de reuniones, sala de juntas y una  zona de alimentos. Además cuenta con todas las comodidades de una habitación.</string>
    <string name="deshabjunk" formatted="false">Habitación de 44mts² con cama king, aire acondicionado, ventanas antiruido, escritorio, sala y televisor pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño​​.​</string>
    <string name="deshabjunt" formatted="false">Habitación de 44mts² con dos camas, aire acondicionado, ventanas antiruido, escritorio, sala y televisor pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño​​.​</string>
    <string name="desaparta" formatted="false">Apartasuite de 64mts² con cama king, disponibilidad para cama adicional y sala independiente con una cocineta. Además cuenta con aire acondicionado, ventanas antiruido, escritorio, televisor pantalla plana, clóset, minibar, cajilla de seguridad y baño​​.​</string>
    <string name="desdis" formatted="false">Habitación de 49mts² de dos ambientes con cama king, aire acondicionado, ventanas antiruido, escritorio, sala independiente y televisor pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño con barandas, amenities, bata de baño, pantuflas y secador de pelo​​.​</string>
    <string name="dessu" formatted="false">Suite de 49mts² con una sala independiente,  cama king, aire acondicionado, ventanas antiruido, escritorio y dos televisores pantalla plana. Además cuenta con clóset, minibar, cajilla de seguridad y baño con amenities, bata de baño, pantuflas y secador de pelo​​.​</string>
    <string name="dessupeje" formatted="false">Suite de 55mts² ubicada en el piso ejecutivo, con acceso a la zona VIP que cuenta con servicio en el front desk, sala de reuniones, sala de juntas y una  zona de alimentos. La Suite tiene una sala independiente,  cama king y las demas comodidades de una habitación.</string>
    <string name="dessuan" formatted="false">Suite de 118mts² de tres espacios ubicada en el piso ejecutivo, con acceso a la zona VIP que cuenta con servicio en el front desk, sala de reuniones, sala de juntas y una  zona de alimentos. La Suite tiene sala comedor, dos baños, habitación con cama king,sala y las demas comodidades de una habitación</string>
    <string name="dessupre" formatted="false">Suite presidencial de 559mts² de cinco espacios ubicada en el piso ejecutivo, con acceso a la zona VIP con servicio en el front desk, sala de reuniones, sala de juntas, una  zona de alimentos, una sala independiente, cocineta, zona común compuesta por terraza con baños. La habitación principal tiene una cama Extraking y demas comodidades. </string>
    <string name="habapar" formatted="false">Habitación ApartaSuite</string>
    <string name="habsuan" formatted="false">Habitación Suite Antioquia</string>
    <string name="habsupre" formatted="false">Habitación Suite Presidencial</string>
    <string name="habsueje" formatted="false">Habitación Suite Ejecutiva</string>
    <string name="habsu" formatted="false">Habitación Suite</string>
    <string name="habjusuk" formatted="false">Habitación Junior Suite King</string>
    <string name="habjut" formatted="false">Habitación Junior Twin</string>
    <string name="habsupk" formatted="false">Habitación Superior King</string>
    <string name="habsupt" formatted="false">Habitación Superior Twin</string>
    <string name="habsupeje" formatted="false">Habitación Superior Ejecutiva</string>
    <string name="habdis" formatted="false">Habitación Discapacitados</string>
    <string name="salgs" formatted="false">Gran salón</string>
    <string name="salan" formatted="false">Antioquia</string>
    <string name="salmed" formatted="false">Medellín</string>
    <string name="salci" formatted="false">Citará</string>
    <string name="salep" formatted="false">Eterna Primavera</string>
    <string name="salgi" formatted="false">Girardot</string>
    <string name="salsu" formatted="false">Sucre</string>
    <string name="salco" formatted="false">Córdoba</string>
    <string name="salbo" formatted="false">Bolivar</string>
    <string name="salsa" formatted="false">Santander</string>
    <string name="salca" formatted="false">Capiro</string>
    <string name="salfa" formatted="false">Farallones</string>
    <string name="salin" formatted="false">Ingrumá</string>
    <string name="salla" formatted="false">Las Palmas</string>
    <string name="salsan" formatted="false">Santafé</string>
    <string name="cantidad" formatted="false">Cantidad:</string>
    <string name="seis">6:00 am - 7:00 am</string>
    <string name="siete">7:00 am - 8:00 am</string>
    <string name="ocho">8:00 am - 9:00 am</string>
    <string name="nueve">9:00 am - 10:00 am</string>
    <string name="diez">10:00 am - 11:00 am</string>
    <string name="once">11:00 am - 12:00 am</string>
    <string name="doce">12:00 m - 1:00 pm</string>
    <string name="una">1:00 pm - 2:00 pm</string>
    <string name="dos">2:00 pm - 3:00 pm</string>
    <string name="tres">3:00 pm - 4:00 pm</string>
    <string name="cuatro">4:00 pm - 5:00 pm</string>
    <string name="cinco">5:00 pm - 6:00 pm</string>
    <string name="seisp">6:00 pm - 7:00 pm</string>
    <string name="gsar" formatted="false">Área:941,7 m²</string>
    <string name="anar" formatted="false">Área:447,9 m²</string>
</resources>