<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisaamariles.ichr_movil.RegistroFragment"
    android:orientation="vertical"
    android:background="@drawable/sala1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:id="@+id/reg"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:orientation="horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/nombrer"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eNombre1"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:id="@+id/apellido"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eApellido1"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ced"
            android:id="@+id/cedula"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eCedula"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:id="@+id/telefono"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eTelefono"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:id="@+id/direccion2"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eDireccion2"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:id="@+id/correo"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eCorreo2"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prof"
            android:id="@+id/profesion"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:singleLine="true"
            android:textStyle="italic"
            android:id="@+id/eProfesion"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot"
            android:id="@+id/motivo"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="20dp"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/motivo2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/darkgoldenrod"
            android:text="@string/registrar"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="italic"
            android:id="@+id/Registrar"/>
        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="10dp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/darkgoldenrod"
            android:text="@string/cancelar"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="italic"
            android:id="@+id/Rcancelar"/>
        </LinearLayout>
</LinearLayout>

</FrameLayout>
