<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Log"
        android:id="@+id/log"
        android:gravity="center"
        android:textSize="13sp"
        android:textStyle="italic"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/user"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:id="@+id/userres"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/Name1"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:id="@+id/nombreres"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:id="@+id/mail"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:id="@+id/mailres"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        />


</LinearLayout>