<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisaamariles.ichr_movil.SpaFragment"
    android:orientation="vertical"
    android:background="@color/silver">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/spa"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold|italic"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/spa"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/spades"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/reserva"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="italic"
                android:id="@+id/Reservas"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
