<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisaamariles.ichr_movil.CanchasFragment"
    android:orientation="vertical"
    android:background="@color/silver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="212dp"
            android:src="@drawable/golf"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/mini"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minides"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/reserva"
                    android:gravity="right"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:id="@+id/Reservag"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="300dp"
            android:src="@drawable/esparcimiento2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/tenis"
                android:gravity="center"
                android:textSize="22dp"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenisdes"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/reserva"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="italic"
                android:id="@+id/Reservat"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</FrameLayout>
